# richdem

./: .gitignore
wrappers/pyrichdem/: MANIFEST.in  pyproject.toml  setup.py
wrappers/pyrichdem/src/: pywrapper.cpp
