[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.9.1,<3", "numpy>=1.7,<2"]
build-backend = "setuptools.build_meta"

[project]
name = "richdem"
version = "2.1.2"
description = "High-Performance Terrain Analysis"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Richard Barnes", email = "rbarnes@umn.edu"}
]
urls = {homepage = "https://github.com/r-barnes/richdem"}
keywords = ["GIS", "terrain", "hydrology", "geomorphology", "raster"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
rd_depression_filling = "richdem.cli:DepressionFilling"
rd_breach_depressions = "richdem.cli:BreachDepressions"
rd_flow_accumulation = "richdem.cli:FlowAccumulation"
rd_terrain_attribute = "richdem.cli:TerrainAttribute"
rd_info = "richdem.cli:RdInfo"
rd_compare = "richdem.cli:RdCompare"